@@ -226,6 +226,8 @@
       \item The internal method of \code{download.file()} can now handle
       files larger than 2GB on 32-bit builds which support such files
       (tested on 32-bit \R running on 64-bit Windows).
+
+      \item \code{kruskal.test()} warns on more types of suspicious input.
     }
   }
 
